Fix title and signatures spacing

--- a/app/views/ReportView/components/ProbeSummary/components/PrintTable/index.scss
+++ b/app/views/ReportView/components/ProbeSummary/components/PrintTable/index.scss
@@ -2,7 +2,7 @@
 
 .table {
   border-collapse: collapse;
-  margin: 16px;
+  margin: 8px;
 
   &__header {
     font-size: 9pt;
